# Error-correction-codes

./: .gitignore  README.md  build.py  main.py  pyproject.toml  run_app.py  setup.py
src/ecc/: __init__.py
src/ecc/app/: streamlit_app.py
src/ecc/channel/: __init__.py  channel.py  channel__mypyc.cp314-win_amd64.pyd  noise.cp314-win_amd64.pyd  noise.py  noise__mypyc.cp314-win_amd64.pyd
src/ecc/codes/: __init__.py  base.py  hamming.cp314-win_amd64.pyd  hamming.py  hamming__mypyc.cp314-win_amd64.pyd  polar.py  reed_solomon.py  reed_solomon__mypyc.cp314-win_amd64.pyd
src/ecc/core/: __init__.py  binary.cp314-win_amd64.pyd  binary.py  binary__mypyc.cp314-win_amd64.pyd  message.py  message__mypyc.cp314-win_amd64.pyd
src/ecc/stats/: __init__.py  metrics.py  metrics__mypyc.cp314-win_amd64.pyd
src/ecc/visualization/: __init__.py  plots.py
tests/: conftest.py  test_binary.py  test_channel.py  test_hamming.py  test_message.py  test_noise.py  test_polar.py  test_reed_solomon.py  test_statistics.py
